# yolov8_ros

yolo_cpp_ros/: CMakeLists.txt  package.xml
yolo_cpp_ros/include/yolo_cpp_ros/: yolo_node.hpp  yolo_onnx.hpp
yolo_cpp_ros/src/: yolo_main.cpp
yolo_cpp_ros/src/yolo_cpp_node/: yolo_node.cpp  yolo_onnx.cpp
yolo_onnxruntime_vendor/: CMakeLists.txt  package.xml
