<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_cpp_ros</name>
  <version>0.0.0</version>
  <description>YOLO ONNX C++ for ROS 2</description>
  <maintainer email="55236157+agonzc34@users.noreply.github.com">agonzc34</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>yolo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>yolo_onnxruntime_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
